Fixes spacing on right side

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -28,8 +28,7 @@ body {
 }
 
 .feed-right-side {
-    float: right;
-    margin-right: 12%;
+    margin-left: 70%;
 }
 
 .icon {
